src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #dd44b9;
  --ifm-color-primary-dark: #b72194;
  --ifm-color-primary-darker: #ab1f8a;
  --ifm-color-primary-darkest: #86186d;
  --ifm-color-primary-light: #c4249e;
  --ifm-color-primary-lighter: #c924a2;
  --ifm-color-primary-lightest: #d026a8;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
  --ifm-font-family-base: 'Strawford', sans-serif;
  --ifm-navbar-link-color: #fff;
  --ifm-button-background-color: #dd44b9;
  --ifm-custom-base: rgba(59, 59, 59, 0.75);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #dd44b9;
  --ifm-color-primary-dark: #dd42b8;
  --ifm-color-primary-darker: #dc3fb7;
  --ifm-color-primary-darkest: #dc3fb7;
  --ifm-color-primary-light: #e15cc2;
  --ifm-color-primary-lighter: #e469c7;
  --ifm-color-primary-lightest: #ea8dd4
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
  --ifm-custom-base: rgba(255, 255, 255, 0.75);
}

/* Custom Fonts */
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600&display=swap');

@font-face {
  font-family: 'Strawford';
  src: url('../../static/fonts/Strawford-ExtraLight.woff2') format('woff2'),
      url('../../static/fonts/Strawford-ExtraLight.otf') format('otf'),
      url('../../static/fonts/Strawford-ExtraLight.ttf') format('ttf');
  font-weight: 100 200;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Strawford';
  src: url('../../static/fonts/Strawford-Light.woff2') format('woff2'),
      url('../../static/fonts/Strawford-Light.otf') format('otf'),
      url('../../static/fonts/Strawford-Light.ttf') format('ttf');
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Strawford';
  src: url('../../static/fonts/Strawford-Regular.woff2') format('woff2'),
      url('../../static/fonts/Strawford-Regular.woff') format('woff'),
      url('../../static/fonts/Strawford-Regular.eot') format('eot'),
      url('../../static/fonts/Strawford-Regular.ttf') format('ttf');
  font-weight: 400 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Strawford';
  src: url('../../static/fonts/Strawford-Medium.woff2') format('woff2'),
      url('../../static/fonts/Strawford-Medium.otf') format('otf'),
      url('../../static/fonts/Strawford-Medium.ttf') format('ttf');
  font-weight: 600 700;
  font-style: normal;
  font-display: swap;
}

a:hover {
  text-decoration: none;
}

@font-face {
  font-family: 'Strawford';
  src: url('../../static/fonts/Strawford-Black.woff2') format('woff2'),
        url('../../static/fonts/Strawford-Black.woff') format('woff'),
        url('../../static/fonts/Strawford-Black.eot'),
        url('../../static/fonts/Strawford-Black.ttf') format('truetype');
  font-weight: 800;
  font-style: normal;
  font-display: swap;
}

.navbar--fixed-top {
  background-color: rgba(18, 19, 21, 0.75) !important;
  border-radius: 12px !important;
  backdrop-filter: blur(10px);
  margin: auto !important;
  width: 90% !important;
  height: 92px !important;
}

.navbar__logo {
  height: 3rem !important;
}

.navbar {
  position: fixed;
  top: 15px;
  left: 50%;
  transform: translate(-50%);
}

.hero {
  padding: 10rem 0 6rem !important;
}

.hero--primary {
  background-color: rgba(18, 19, 21, 1) !important;
}

.docPage_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-styles-module {
  margin-top: 125px;
}

.hero_home {
  font-family: var(--ifm-font-family-base);
  font-weight: 600;
  font-size: 36px;
  align-items: start;
  margin-left: 115px;
  margin-top: 70px;
  margin-bottom: 30px;
}

.hero_home_faq {
  color: #DD44B9;
  display: flex;
  gap: 5px;
}

.arrowUp-icon {
  height: 16px;
  width: 16px;
  align-items: center;
  display: flex;
  justify-content: center;
}

.developer_guides_list {
  height: 234px;
  width: 350px;
  border: 1px solid #D9D9D9;
  border-radius: 24px;
  cursor: pointer;
}

.border-pink {
  border: 2px solid #D53A94;
}

.inner-card {
  left: 50%;
  right: 50%;
  margin: auto;
  max-width: 80%;
  border: none;
}

.card-details {
  margin-top: 24px;
}

.notification_icon {
  height: 48px;
}

.notification_header {
  font-family: var(--ifm-font-family-base);
  font-weight: 500;
  font-size: 24px;
  color: #121315;
}

.guide_info {
  font-family: var(--ifm-font-family-base);
  font-weight: 400;
  font-size: 16px;
  color: #575D73;
  margin-top: -10px;
}

.container {
  /* max-width: 90%; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.guide_list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: 20px;
  row-gap: 20px;
}

 @media (max-width: 1440px) {
  .hero_home {
    margin-left: 25px;
  }
}



@media (max-width: 800px) {
  .guide_list {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
}

.sdk-container {
  height: 76px;
  width: 350px;
  border-radius: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.gray-border {
  border: 1px solid #D9D9D9;
}

.sdk-container-inner {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 80%;
}

.sdk-container-list {
  width: 67%;
  align-items: flex-start;
  /* align-items: center; */
}

.sdk-title {
  font-size: 24px;
  font-weight: 500;
}

.sdk-icon {
  display: flex;
  align-items: center;
}

.hero_home_Faq_header {
  font-family: var(--ifm-font-family-base);
  font-weight: 600;
  font-size: 36px;
  align-items: center;
  /* margin-bottom: 30px; */
}


.App {
  font-family: var(--ifm-font-family-base);
  text-align: center;
}

.question-section {
  background: transparent;
  /* border: 1px solid lightgray; */
  border-radius: 8px;
  /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
  cursor: pointer;
  max-width: 80%;
  align-items: center;
  margin: auto;
}

.question-section {
  border: none;
}

.question-align {
  align-items: center;
  display: flex;
  justify-content: space-between;
  min-height: 10px;
  text-align: left;
  max-width: 90%;
  left: 50%;
  right: 50%;
  margin: auto;
}

.answer-style {
  font-size: 18px;
  max-width: 90%;
  margin: auto;
}

.question-align h4 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.question-styling {
  font-size: 17px;
  width: 100%;
}

.question-style {
  font-size: 24px;
  font-weight: 600;
  display: flex;
  align-items: center;
  justify-content: center;
}

.rotate {
  transform: rotate(45deg);
}

.answer {
  overflow: hidden;
  transition: max-height 0.6s ease;
  text-align: left;
  margin-bottom: 15px;
}

/* Footer */

.footer-container {
  background-color: #121315;
  /* height: 80vh; */
}

.footer-subcontainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.Subscribe-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  background-color: #CEC3F9;
  margin-top: 10%;
  height: 301px;
  width: 80%;
  padding: 50px;
  border-radius: 48px;
}

.footer-subscribe-header {
  font-size: 40px;
  font-style: var(--ifm-font-family-base);
}

.footer-subscribe-description {
  font-size: 20px;
  font-style: var(--ifm-font-family-base);
  max-width: 70%;
}

.input-section {
  height: 66px;
  width: 404px;
  background-color:  #FFFFFF;
  border-radius: 21px;
  display: flex;
  padding: 10px;
  align-items: center;
}

.input-section button {
  width: 136px;
  height: 54px;
  font-size: 18px;
  background-color: #DD44B9;
  border-radius: 16px;
  border: none;
  color: white;
}

.input-section input {
  width: 70%;
  outline: none;
  border: none;
  border-radius: 21px;
  padding: 18px 23px;
  font-size: 24px;
}

.footer_more_info {
  background-color: #2A2A39;
  border-radius: 32px;
  display: flex;
  column-gap: 20px;
  align-items: center;
  justify-content: center;
  margin: auto;
  width: 500px;
  height: 219px;
  padding: 20px;
}

.footer-description {
  color: #DD44B9;
  font-size: 18px;
  font-weight: 500;
}

.footer-more-info-container {
  display: flex;
  margin-top: 30px;
  margin-bottom: 20px;
  column-gap: 30px;
  flex-wrap: wrap;
  row-gap: 30px;
}

.footer_more_info_header {
  font-size: 24px;
  font-weight: 500;
  color: #FFFFFF;
}

.open_pos_link {
  display: flex;
  align-items: center;
  text-align: center;
}

.link-list-container {
  display: flex;
  column-gap: 80px;
  color: white;
  text-align: start;
  display: flex;
  flex-wrap: wrap;
  margin-top: 100px;
}

.link-list-container a, li{
  align-items: flex-start;
  list-style: none;
}

.link-list-sub-container a{
  color: #9C9CBE;
}

.link-list-sub-container {
  display: flex;
  flex-direction: column;
  /* align-items: center; */
}

.company-links {
  list-style: none;
  padding: 0;
  margin-bottom: 20px;
}

.email-input {
  height: 49px;
  width: 237px;
  font-size: 18px;
  border-radius: 32px;
  padding: 20px;
  background-color: transparent;
}

.push-logo-footer {
  width: 125px;
  height: 48px;
}

.footer-social-icons {
  display: flex;
  column-gap: 10px;
}

.social-footer-icons-2 {
  display: flex;
  column-gap: 10px;
}

.footer-icons {
  height: 43px;
  width: 43px;
  border: 1px solid #2A2A39;
  padding: 10px;
  border-radius: 12px;
}

.footer-icons-contianer {
  display: flex;
  align-items: center;
  justify-content: center;
  column-gap: 380px;
  margin-top: 5%;
  padding-bottom: 5%;
}

.dash_partition {
  background-color: #2A2A39;
  width: 70%;
  margin: auto;
}

